force-app/main/default/objects/RegulatoryCode/fields/nepa_compliance_requirements__c.field-meta.xml
<CustomField>
    <fullName>nepa_compliance_requirements__c</fullName>
    <description>Procedural mandates or compliance requirements imposed by this legal authority on NEPA review processes.</description>
    <inlineHelpText>Procedural requirements agencies must follow when applying this legal authority.</inlineHelpText>
    <label>Compliance Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>