force-app/main/default/objects/RegulatoryCode/fields/nepa_data_record_version__c.field-meta.xml
<CustomField>
    <fullName>nepa_data_record_version__c</fullName>
    <description>CEQ standard v1.2 provenance: version identifier for this data record.</description>
    <label>Data Record Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>