force-app/main/default/objects/RegulatoryCode/fields/nepa_retrieved_timestamp__c.field-meta.xml
<CustomField>
    <fullName>nepa_retrieved_timestamp__c</fullName>
    <description>CEQ standard v1.2 provenance: timestamp when this record was retrieved from the source system.</description>
    <label>Retrieved Timestamp</label>
    <type>DateTime</type>
</CustomField>