force-app/main/default/objects/RegulatoryCode/fields/nepa_text_content__c.field-meta.xml
<CustomField>
    <fullName>nepa_text_content__c</fullName>
    <description>Full text or relevant excerpt of the statutory or regulatory provision.</description>
    <inlineHelpText>Full text or key excerpt of this legal provision.</inlineHelpText>
    <label>Text Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>